--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "express": "^4.16.4",
     "moment": "^2.24.0",
+    "mongoose": "^5.4.10",
+    "nodemon": "^1.18.9",
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.7.0",
@@ -14,6 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "server" : "nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
