--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "capstone",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "chart.js": "^2.7.3",
     "express": "^4.16.4",
     "moment": "^2.24.0",
     "mongoose": "^5.4.10",
     "nodemon": "^1.18.9",
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.5",
+    "react-chartjs": "^1.2.0",
     "react-dom": "^16.7.0",
     "react-router": "^4.3.1",
     "react-scripts": "2.1.3",
@@ -17,7 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "server" : "nodemon server.js",
+    "server": "nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
